Tags componentes en html cambiadas por />

--- a/src/app/views/accounts/recovery-password-change/recovery-password-change.component.html
+++ b/src/app/views/accounts/recovery-password-change/recovery-password-change.component.html
@@ -5,7 +5,7 @@
         <h1 class="h3 mb-3 fw-normal"><span class="fa-solid fa-user"></span>Recuperar contraseña</h1>
         <hr />
 
-        <aw-non-field-errors [badRequest]="badRequest"></aw-non-field-errors>
+        <aw-non-field-errors [badRequest]="badRequest" />
 
         <ng-container *ngIf="errorMessages.length > 0">
           <div class="alert alert-danger">Se ha producido un error al restablecer la contraseña</div>
@@ -20,8 +20,7 @@
             [inputType]="formInputTypes.password"
             fieldName="password"
             formControlName="password"
-            label="Contraseña">
-          </aw-form-floating>
+            label="Contraseña" />
         </div>
         <!-- end password -->
 
@@ -34,8 +33,7 @@
             [inputType]="formInputTypes.password"
             fieldName="confirmPassword"
             formControlName="confirmPassword"
-            label="Contraseña">
-          </aw-form-floating>
+            label="Contraseña" />
         </div>
         <!-- end confirmPassword -->
 
@@ -44,7 +42,7 @@
         <aw-btn-loading
           [loading]="loading"
           btnClass="w-100 btn btn-lg btn-primary mt-2"
-          btnText="Restablecer contraseña"></aw-btn-loading>
+          btnText="Restablecer contraseña" />
       </form>
     </aw-card>
   </div>
