--- a/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/views/company-settings/company-settings-details/company-settings-details.component.html
@@ -7,6 +7,7 @@
     </a>
 
     <table class="table table-striped table-borderless">
+      <caption></caption>
       <thead>
         <!-- details -->
         <ng-container *ngIf="!loadingCompanySettings()">
