--- a/src/app/views/company-tasks/company-task-list/company-task-list.component.html
+++ b/src/app/views/company-tasks/company-task-list/company-task-list.component.html
@@ -14,7 +14,7 @@
         <aw-table-input-search
           (clickClean)="handleClickClean($event)"
           [apiResult]="apiResult"
-          [tableHeaderConfig]="tableHeaderConfig"></aw-table-input-search>
+          [tableHeaderConfig]="tableHeaderConfig" />
       </span>
     </div>
     <!-- end toolbar -->
@@ -52,8 +52,7 @@
       (changePage)="handleReloadData()"
       (changePageListNumber)="handleReloadData()"
       *ngIf="apiResult"
-      [apiResult]="apiResult">
-    </aw-pagination>
+      [apiResult]="apiResult" />
     <!-- end pagination -->
   </aw-card>
 </aw-view-base>
