--- a/src/app/views/departments/department-view/department-add-users/department-add-users.component.html
+++ b/src/app/views/departments/department-view/department-add-users/department-add-users.component.html
@@ -12,5 +12,5 @@
   <aw-dual-list-box
     (saveChanges)="handleSaveChanges($event)"
     [htmlItemSelector]="htmlItemSelector"
-    [loading]="loading"></aw-dual-list-box>
+    [loading]="loading" />
 </ng-container>
