--- a/src/app/views/employees/employee-view/employee-details/employee-roles-edit/employee-roles-edit.component.html
+++ b/src/app/views/employees/employee-view/employee-details/employee-roles-edit/employee-roles-edit.component.html
@@ -73,7 +73,7 @@
       btnClass="btn btn-success ms-2"
       btnIcon="fa-regular fa-floppy-disk"
       btnText="Guardar cambios"
-      spinnerLoadingText="Guardando"></aw-btn-loading>
+      spinnerLoadingText="Guardando" />
   </div>
   <!-- end footer -->
 </div>
