--- a/src/app/views/employees/employee-view/employee-time-control/employee-time-control.component.html
+++ b/src/app/views/employees/employee-view/employee-time-control/employee-time-control.component.html
@@ -5,7 +5,7 @@
 <div class="my-3">
   <aw-month-selector
     (changeMonthSelected)="handleDateSelected($event)"
-    [dateSelected]="dateSelected"></aw-month-selector>
+    [dateSelected]="dateSelected" />
 </div>
 
 <div class="d-flex my-3">
@@ -15,7 +15,7 @@
 <!-- times -->
 <div>
   <aw-time-control-progress
-    [progressStackedCollection]="progressStackedCollection"
-    [loading]="loadingTimeControls"></aw-time-control-progress>
+    [loading]="loadingTimeControls"
+    [progressStackedCollection]="progressStackedCollection" />
   <!-- end times -->
 </div>
