--- a/src/app/views/accounts/recovery-password/recovery-password.component.html
+++ b/src/app/views/accounts/recovery-password/recovery-password.component.html
@@ -5,7 +5,7 @@
         <h1 class="h3 mb-3 fw-normal"><span class="fa-solid fa-lock"></span> Recuperar contraseña</h1>
         <hr />
 
-        <aw-non-field-errors [badRequest]="badRequest"></aw-non-field-errors>
+        <aw-non-field-errors [badRequest]="badRequest" />
 
         <ng-container *ngIf="hasResponse">
           <div class="alert alert-success">
@@ -22,8 +22,7 @@
             [submitted]="submitted"
             fieldName="email"
             formControlName="email"
-            label="Correo electrónico">
-          </aw-form-floating>
+            label="Correo electrónico" />
         </div>
         <!-- end email -->
 
@@ -32,7 +31,7 @@
         <aw-btn-loading
           [loading]="loading"
           btnClass="w-100 btn btn-lg btn-primary mt-2"
-          btnText="Recuperar contraseña"></aw-btn-loading>
+          btnText="Recuperar contraseña" />
       </form>
     </aw-card>
   </div>
