--- a/src/app/views/company-tasks/company-task-create/company-task-create.component.html
+++ b/src/app/views/company-tasks/company-task-create/company-task-create.component.html
@@ -4,7 +4,7 @@
   <aw-card>
     <!-- form -->
     <form (ngSubmit)="handleSubmit()" [formGroup]="form">
-      <aw-non-field-errors [badRequest]="badRequest"></aw-non-field-errors>
+      <aw-non-field-errors [badRequest]="badRequest" />
 
       <ng-container *ngIf="form.get('name')?.value">
         <div class="my-3">
@@ -23,8 +23,7 @@
           [submitted]="submitted"
           fieldName="name"
           formControlName="name"
-          label="Nombre">
-        </aw-form-input>
+          label="Nombre" />
       </div>
       <!-- end name -->
 
@@ -37,8 +36,7 @@
             [submitted]="submitted"
             fieldName="background"
             formControlName="background"
-            label="Color de fondo">
-          </aw-form-color>
+            label="Color de fondo" />
         </div>
         <!-- end background -->
 
@@ -50,19 +48,18 @@
             [submitted]="submitted"
             fieldName="color"
             formControlName="color"
-            label="Color de texto">
-          </aw-form-color>
+            label="Color de texto" />
         </div>
         <!-- end color -->
       </div>
 
       <!-- buttons-->
-      <aw-btn-back cssClass="btn btn-primary mt-2 me-2"></aw-btn-back>
+      <aw-btn-back cssClass="btn btn-primary mt-2 me-2" />
       <aw-btn-loading
         [loading]="loading"
         btnClass="btn btn-success mt-2"
         btnIcon="fa-solid fa-list-check"
-        btnText="Crear"></aw-btn-loading>
+        btnText="Crear" />
       <!-- end buttons-->
     </form>
     <!-- end form -->
