--- a/src/app/views/company-tasks/company-task-view/company-task-users/company-task-users.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-users/company-task-users.component.html
@@ -12,9 +12,9 @@
 
   <span>
     <aw-table-input-search
-      [tableHeaderConfig]="tableHeaderConfig"
+      (clickClean)="handleClickClean($event)"
       [apiResult]="apiResult"
-      (clickClean)="handleClickClean($event)"></aw-table-input-search>
+      [tableHeaderConfig]="tableHeaderConfig" />
   </span>
 </div>
 <!-- end toolbar -->
@@ -23,14 +23,14 @@
 <aw-table [apiResult]="apiResult" [loading]="loading">
   <thead awThead>
     <tr
-      awTableHeader
-      [tableHeaderConfig]="tableHeaderConfig"
+      (clickOrdering)="handleReloadData()"
       [apiResult]="apiResult"
-      (clickOrdering)="handleReloadData()"></tr>
+      [tableHeaderConfig]="tableHeaderConfig"
+      awTableHeader></tr>
   </thead>
 
-  <tbody awTbody *ngIf="apiResult">
-    <tr *ngFor="let user of apiResult.items" (click)="handleSelectItem(user)" class="cursor-pointer">
+  <tbody *ngIf="apiResult" awTbody>
+    <tr (click)="handleSelectItem(user)" *ngFor="let user of apiResult.items" class="cursor-pointer">
       <td>{{ user.firstName }}</td>
       <td>{{ user.lastName }}</td>
       <td>{{ user.email }}</td>
@@ -41,9 +41,8 @@
 
 <!-- pagination -->
 <aw-pagination
-  *ngIf="apiResult"
-  [apiResult]="apiResult"
   (changePage)="handleReloadData()"
-  (changePageListNumber)="handleReloadData()">
-</aw-pagination>
+  (changePageListNumber)="handleReloadData()"
+  *ngIf="apiResult"
+  [apiResult]="apiResult" />
 <!-- end pagination -->
