--- a/src/app/views/employees/employee-edit/employee-edit.component.html
+++ b/src/app/views/employees/employee-edit/employee-edit.component.html
@@ -5,7 +5,7 @@
     <!-- form -->
     <ng-container *ngIf="employee">
       <form (ngSubmit)="handleSubmit()" [formGroup]="form">
-        <aw-non-field-errors [badRequest]="badRequest"></aw-non-field-errors>
+        <aw-non-field-errors [badRequest]="badRequest" />
 
         <!-- firstName -->
         <div class="mb-2">
@@ -15,7 +15,7 @@
             [submitted]="submitted"
             fieldName="firstName"
             formControlName="firstName"
-            label="Nombre"></aw-form-input>
+            label="Nombre" />
         </div>
         <!-- end firstName -->
 
@@ -27,7 +27,7 @@
             [submitted]="submitted"
             fieldName="lastName"
             formControlName="lastName"
-            label="Apellidos"></aw-form-input>
+            label="Apellidos" />
         </div>
         <!-- end lastName -->
 
@@ -36,11 +36,11 @@
           <aw-form-input
             [badRequest]="badRequest"
             [form]="form"
-            [submitted]="submitted"
             [inputType]="formTypes.email"
+            [submitted]="submitted"
             fieldName="email"
             formControlName="email"
-            label="Correo electrónico"></aw-form-input>
+            label="Correo electrónico" />
         </div>
         <!-- end email -->
 
@@ -52,7 +52,7 @@
             [submitted]="submitted"
             fieldName="phoneNumber"
             formControlName="phoneNumber"
-            label="Teléfono"></aw-form-input>
+            label="Teléfono" />
         </div>
         <!-- end phoneNumber -->
 
@@ -64,7 +64,7 @@
             [submitted]="submitted"
             fieldName="entryDate"
             formControlName="entryDate"
-            label="Fecha de ingreso"></aw-form-datepicker>
+            label="Fecha de ingreso" />
         </div>
         <!-- end entryDate -->
 
@@ -74,15 +74,15 @@
           [loading]="loadingForm"
           btnClass="btn btn-success mt-2 ms-2"
           btnIcon="fa-regular fa-floppy-disk"
-          spinnerLoadingText="Guardando"
-          btnText="Guardar"></aw-btn-loading>
+          btnText="Guardar"
+          spinnerLoadingText="Guardando" />
       </form>
     </ng-container>
     <!-- form -->
 
     <!-- spinner -->
     <ng-container *ngIf="loadingEmployee">
-      <aw-spinner [loading]="loadingEmployee" [size]="100"></aw-spinner>
+      <aw-spinner [loading]="loadingEmployee" [size]="100" />
     </ng-container>
     <!-- end spinner -->
   </aw-card>
