--- a/src/app/views/employees/employee-view/employee-tasks/employee-tasks.component.html
+++ b/src/app/views/employees/employee-view/employee-tasks/employee-tasks.component.html
@@ -11,7 +11,7 @@
     <aw-table-input-search
       (clickClean)="handleClickClean($event)"
       [apiResult]="apiResult"
-      [tableHeaderConfig]="tableHeaderConfig"></aw-table-input-search>
+      [tableHeaderConfig]="tableHeaderConfig" />
   </span>
 </div>
 <!-- end filter -->
@@ -29,7 +29,7 @@
   <tbody *ngIf="apiResult" awTbody>
     <tr (click)="handleSelectItem(task)" *ngFor="let task of apiResult.items" class="cursor-pointer">
       <td>
-        <aw-badge [background]="task.background" [color]="task.color" [name]="task.name"></aw-badge>
+        <aw-badge [background]="task.background" [color]="task.color" [name]="task.name" />
       </td>
       <td [innerHTML]="task.active | boolToIcon"></td>
     </tr>
@@ -42,6 +42,5 @@
   (changePage)="handleReloadData()"
   (changePageListNumber)="handleReloadData()"
   *ngIf="apiResult"
-  [apiResult]="apiResult">
-</aw-pagination>
+  [apiResult]="apiResult" />
 <!-- end pagination -->
